Implement and test day one part two
- [x] Find top three elves for part two
- [ ] Explore reversing the list