@@ -10,13 +10,15 @@ import static org.assertj.core.api.Assertions.*;
 
 public class Day01Test {
 
+    private final Day01 day01 = new Day01();
+
     @Test
     public void oneElfTwoSnacks(){
         // Given
         List<String> input = List.of("100", "200");
 
         // When
-        String result = new Day01().part1(input);
+        String result = day01.part1(input);
 
         // Then
         assertThat(result).isEqualTo("300");
@@ -25,7 +27,7 @@ public class Day01Test {
     @Test
     void twoElves() {
         List<String> input = List.of("200", "", "100");
-        String result = new Day01().part1(input);
+        String result = day01.part1(input);
         assertThat(result).isEqualTo("200");
     }
 
@@ -39,12 +41,27 @@ public class Day01Test {
     @Test
     public void testPart2(){
         // Given
-        List<String> input = Collections.singletonList("test");
+        List<String> input = List.of(
+            "1000",
+            "2000",
+            "3000",
+            "",
+            "4000",
+            "",
+            "5000",
+            "6000",
+            "",
+            "7000",
+            "8000",
+            "9000",
+            "",
+            "10000"
+        );
 
         // When
-        String result = new Day01().part2(input);
+        String result = day01.part2(input);
 
         // Then
-        assertThat(result).isEqualTo(input.get(0));
+        assertThat(result).isEqualTo("45000");
     }
 }
